Tests/testsuite/negative/unknown_flag.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testin; // E: Parse Error: Unknown state machine flag "testin"

  name "unknown flag";
   #>)]
  public class example
  {
  }

